--- a/nerin_final_updated/frontend/style.css
+++ b/nerin_final_updated/frontend/style.css
@@ -73,8 +73,8 @@ header .logo {
 /* Estilos para el logo clickeable */
 header .logo a {
   display: block;
-  width: 32px;
-  height: 32px;
+  width: 360px;
+  height: 64px;
   background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAACAAAAAFlCAIAAADwZJ9dAAB1NUlEQVR4Ae3d\
 B7RdVZ0wcMhLL6QASQi9KgJCqAoIUYSQkFANMo6KODac0ZkRZXTN8luZouO3\
 Bh0rKn4qg2MZehog0gVBIEGa1KBICxBCSEJ6+f7w9JG8vHLrufuc83uuhfee\
@@ -746,6 +746,8 @@ ECBAgAABAgQIECBAgAABAgQIECBAgEAeBf4/0aLxBKY634cAAAAASUVORK5C\
 YII=");
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
+  background-color: #fff;
   text-decoration: none;
 }
 
