--- a/nerin_final_updated/frontend/components/np-footer.html
+++ b/nerin_final_updated/frontend/components/np-footer.html
@@ -1,6 +1,6 @@
 <!-- Template for NERIN Parts footer -->
 <template id="np-footer-template">
-  <footer class="np-footer" role="contentinfo">
+  <footer class="np-footer" role="contentinfo" data-accent="off">
     <div class="np-footer__accent" aria-hidden="true"></div>
     <div class="np-footer__inner">
       <div class="np-footer__cta" hidden></div>
