docs: update mp health report

--- a/nerin_final_updated/frontend/css/receipt.css
+++ b/nerin_final_updated/frontend/css/receipt.css
@@ -73,7 +73,7 @@ body {
   font-size: 0.875rem;
 }
 
-.status-pagado { /* nerin brand fix */
+.status-aprobado { /* nerin brand fix */
   background: var(--color-success);
   color: #fff;
 }
